Creado mediante Colaboratory

--- a/Ejercicio_5.ipynb
+++ b/Ejercicio_5.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Ejercicio1.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOTcvwqLybWleeiNSnswbPq",
+      "authorship_tag": "ABX9TyMsoXYmxhI1DGG/RXwzNdDS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,6 +39,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Series de tiempo. Trabajo con datos del EMAE obtenidos con la API de Alphacast.\n",
+        "\n",
         "Primero importamos todas las librerías necesarias"
       ],
       "metadata": {
@@ -47,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "1PEKVTO-WdWl"
       },
@@ -94,7 +96,7 @@
         "id": "-7zhUQqvWfxS",
         "outputId": "b54cca29-fbc9-4f33-c969-0cadaf301565"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,7 +116,7 @@
       "metadata": {
         "id": "3pxEMECIWqge"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -137,7 +139,7 @@
       "metadata": {
         "id": "vEORXDt4W6xM"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -150,7 +152,7 @@
       "metadata": {
         "id": "YpoqavEtXSYS"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -176,7 +178,7 @@
       "metadata": {
         "id": "1dqljEFrae3g"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -238,7 +240,7 @@
       "metadata": {
         "id": "CdiM_LhEgAje"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": []
     },
     {
