Creado mediante Colaboratory

--- a/RegLin.ipynb
+++ b/RegLin.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOPVCAzx5SWsHZCuXst/rml",
+      "authorship_tag": "ABX9TyNY4DqXBU1MIbx0DF1T2DgD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,23 +28,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "yEXFBRCSdX_0",
-        "outputId": "54654854-4582-4a1e-848f-6460d3507e7f"
+        "outputId": "c5d448d8-89ec-456c-f736-9c03c0ac84f8"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "mkdir: cannot create directory ‘/root/.kaggle’: File exists\n",
             "Mounted at /content/drive\n",
-            "Downloading real-estate-price-prediction.zip to /content\n",
-            "  0% 0.00/6.98k [00:00<?, ?B/s]\n",
-            "100% 6.98k/6.98k [00:00<00:00, 16.6MB/s]\n"
+            "real-estate-price-prediction.zip: Skipping, found more recently modified local copy (use --force to force download)\n"
           ]
         }
       ],
@@ -88,7 +87,7 @@
       "metadata": {
         "id": "BLct2iHfdeY9"
       },
-      "execution_count": 2,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -99,7 +98,7 @@
       "metadata": {
         "id": "W7BHGFyYdjnX"
       },
-      "execution_count": 3,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -110,12 +109,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 485
+          "height": 424
         },
         "id": "gAD0h3NAdmwU",
-        "outputId": "b13330f3-4792-4807-fe4c-535d2716f7b6"
+        "outputId": "b75a32df-6f09-421a-8068-db38ef518175"
       },
-      "execution_count": 4,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -164,7 +163,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-cb323716-f390-45cd-89bf-f02e40471b4c\">\n",
+              "  <div id=\"df-a208e8a4-fced-45f6-9837-60429d97ac55\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -320,7 +319,7 @@
               "</table>\n",
               "<p>414 rows × 8 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cb323716-f390-45cd-89bf-f02e40471b4c')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a208e8a4-fced-45f6-9837-60429d97ac55')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -371,12 +370,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-cb323716-f390-45cd-89bf-f02e40471b4c button.colab-df-convert');\n",
+              "          document.querySelector('#df-a208e8a4-fced-45f6-9837-60429d97ac55 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-cb323716-f390-45cd-89bf-f02e40471b4c');\n",
+              "          const element = document.querySelector('#df-a208e8a4-fced-45f6-9837-60429d97ac55');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -399,24 +398,25 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 30
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "# Con pocas líneas de código puedo correr una RL sobre los datos\n",
         "from sklearn.linear_model import LinearRegression\n",
         "X = df.drop('Y house price of unit area', axis=1) \n",
         "y = df['Y house price of unit area']\n",
         "\n",
-        "reg = LinearRegression().fit(X[:-1], y[:-1])\n",
-        "score = reg.score(X[:-1], y[:-1])"
+        "reg = LinearRegression().fit(X, y)\n",
+        "score = reg.score(X, y)"
       ],
       "metadata": {
         "id": "zmx4Zdpcd2aC"
       },
-      "execution_count": 10,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -429,21 +429,38 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HzVXS3DHe9FG",
-        "outputId": "71d5ab2f-0fa5-43ef-9922-732138b8127c"
+        "outputId": "939782c0-ad95-4e07-f1aa-dcaafad37375"
       },
-      "execution_count": 11,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.5812258437497145"
+              "0.5833632616324717"
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 32
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Con esto puedo ver la relación, puedo buscar también hacer una predicción.\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "X = df.drop('Y house price of unit area', axis=1) \n",
+        "y = df['Y house price of unit area']\n",
+        "\n",
+        "reg = LinearRegression().fit(X[:-1], y[:-1])\n",
+        "score = reg.score(X[:-1], y[:-1])"
+      ],
+      "metadata": {
+        "id": "qMAtW1SsWgtN"
+      },
+      "execution_count": 98,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -455,9 +472,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "v1ZRfO1Bfs7D",
-        "outputId": "47ff5096-38ff-4a42-9a4a-f353838bfdcb"
+        "outputId": "d398cf11-21db-4b32-f5c2-bce896f24535"
       },
-      "execution_count": 14,
+      "execution_count": 99,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -467,7 +484,331 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 99
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Podría, como vimos, generar más variables\n",
+        "for x in X.columns:\n",
+        "    X['%s_2' % x] = X[x]*X[x]\n",
+        "    X['%s_3' % x] = X[x]**3\n",
+        "    X['%s_4' % x] = X[x]**4\n",
+        "    X['%s_5' % x] = X[x]**5"
+      ],
+      "metadata": {
+        "id": "_7GJHY1xU4SE"
+      },
+      "execution_count": 100,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "reg = LinearRegression().fit(X, y)\n",
+        "score = reg.score(X, y)"
+      ],
+      "metadata": {
+        "id": "7hlQp6udVYCk"
+      },
+      "execution_count": 101,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# El score debería mejorar\n",
+        "score"
+      ],
+      "metadata": {
+        "id": "fxI7mz-eVbvt",
+        "outputId": "901c12ce-c8f3-4292-b9ca-4f8c07643f97",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.6778634522226332"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 102
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        " # ¿Mejora la predicción? "
+      ],
+      "metadata": {
+        "id": "ya4BnRMbYxli"
+      },
+      "execution_count": 81,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "reg = LinearRegression().fit(X[:-1], y[:-1])\n",
+        "score = reg.score(X[:-1], y[:-1])"
+      ],
+      "metadata": {
+        "id": "yp4zeMSWY3a4"
+      },
+      "execution_count": 82,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "score"
+      ],
+      "metadata": {
+        "id": "2zAB9ihGZL6h",
+        "outputId": "8eb1c077-2590-4e8a-9785-3f47ddc9d40b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 83,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.6785030449382465"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 83
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "reg.predict(X[-1:])"
+      ],
+      "metadata": {
+        "id": "WOsnrQglY5Km",
+        "outputId": "7032a87d-d820-4b5e-88a8-90a52d0faea0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([54.90978497])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 84
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "reg.coef_"
+      ],
+      "metadata": {
+        "id": "dZJE7JxYVj8B",
+        "outputId": "75409c74-e5fa-4469-aa0f-b73e6f9a86f0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 5.55694069e-06, -7.30276726e-04, -2.35126980e-05, -5.88146611e-04,\n",
+              "        2.95616013e-05, -2.52704884e-11, -2.01899080e-11,  2.80319590e-04,\n",
+              "       -3.36209246e-06,  1.23377120e-08, -1.43039825e-11, -5.65331727e-10,\n",
+              "       -5.69197720e-07, -4.14836011e-07,  1.65007296e-10, -4.23365430e-04,\n",
+              "       -4.77930024e-03,  2.27905179e-04, -2.76834734e-06, -1.84225683e-05,\n",
+              "        1.10106312e-08, -2.26175661e-12,  1.53138127e-16,  1.90962933e-04,\n",
+              "        1.00961690e-03,  3.97731036e-03, -3.78109001e-04, -1.19258729e-10,\n",
+              "        4.33606541e-08,  3.02723613e-06,  1.43643953e-04, -3.57327786e-09,\n",
+              "       -4.34258658e-07, -3.51830312e-05,  2.09506381e-07])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 85
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.model_selection import train_test_split\n",
+        "X = df.drop('Y house price of unit area', axis=1) \n",
+        "y = df['Y house price of unit area']\n",
+        "X_train, X_test, y_train, y_test=train_test_split(X,y)"
+      ],
+      "metadata": {
+        "id": "M9-uIypHTbG2"
+      },
+      "execution_count": 103,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "reg = LinearRegression().fit(X_train, y_train)\n",
+        "score = reg.score(X_train, y_train)\n",
+        "score"
+      ],
+      "metadata": {
+        "id": "V6XNR-yHWEvE",
+        "outputId": "c5c8667f-7434-47a2-b236-fa59530f2073",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 106,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.5608719913319222"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 106
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "score = reg.score(X_test, y_test)\n",
+        "score"
+      ],
+      "metadata": {
+        "id": "JCqDKyfLWJe1",
+        "outputId": "3b9d6a26-60ff-457b-f4f8-ea6ed0eefeef",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.653570145794022"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 107
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X = df.drop('Y house price of unit area', axis=1) \n",
+        "y = df['Y house price of unit area']"
+      ],
+      "metadata": {
+        "id": "xI7aexuye-01"
+      },
+      "execution_count": 133,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for x in X.columns:\n",
+        "    X['%s_2' % x] = X[x]*X[x]\n",
+        "    X['%s_3' % x] = X[x]**3"
+      ],
+      "metadata": {
+        "id": "AMCkqlEvetmG"
+      },
+      "execution_count": 134,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_train, X_test, y_train, y_test=train_test_split(X,y)"
+      ],
+      "metadata": {
+        "id": "qgwfrgVtevug"
+      },
+      "execution_count": 135,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "reg = LinearRegression().fit(X_train, y_train)\n",
+        "score = reg.score(X_train, y_train)\n",
+        "score"
+      ],
+      "metadata": {
+        "id": "7Fi1YOr4exa7",
+        "outputId": "600a8449-1d34-4e41-fb04-11e2424060c5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 136,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.6715557494222187"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 136
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "score = reg.score(X_test, y_test)\n",
+        "score"
+      ],
+      "metadata": {
+        "id": "47uIb6Uzeyo1",
+        "outputId": "2c57a7ed-d9b1-46f6-e231-d3e4b2471ae2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 137,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.7493573771045376"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 137
         }
       ]
     }
