Creado mediante Colaboratory

--- a/Operadores.ipynb
+++ b/Operadores.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOHwNsXF//isceb9KbrrCB7",
+      "authorship_tag": "ABX9TyOnHQLc0ZBmnJlzZf5o4nig",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 2,
       "metadata": {
         "id": "Ccu_AnD_llep"
       },
@@ -49,9 +49,9 @@
           "height": 424
         },
         "id": "5Jrp9tfyn2_2",
-        "outputId": "abc21934-1be7-4fa9-8f5e-82fe00a5b152"
+        "outputId": "a8d7fcea-0fed-4b49-80ba-d7bed31694c1"
       },
-      "execution_count": 21,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -74,7 +74,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-05dc51a4-17d2-4086-ad07-a298fe42af77\">\n",
+              "  <div id=\"df-f93d1d6d-775a-4472-a335-c853468f6623\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -158,7 +158,7 @@
               "</table>\n",
               "<p>144 rows × 2 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-05dc51a4-17d2-4086-ad07-a298fe42af77')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f93d1d6d-775a-4472-a335-c853468f6623')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -209,12 +209,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-05dc51a4-17d2-4086-ad07-a298fe42af77 button.colab-df-convert');\n",
+              "          document.querySelector('#df-f93d1d6d-775a-4472-a335-c853468f6623 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-05dc51a4-17d2-4086-ad07-a298fe42af77');\n",
+              "          const element = document.querySelector('#df-f93d1d6d-775a-4472-a335-c853468f6623');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -237,7 +237,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 3
         }
       ]
     },
@@ -249,7 +249,7 @@
       "metadata": {
         "id": "8CjtOpY5oPvo"
       },
-      "execution_count": 22,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -258,14 +258,14 @@
         "data"
       ],
       "metadata": {
-        "id": "ntP54z5hodqx",
-        "outputId": "d6c6da8f-7c17-4c44-fad0-d11a453fe85d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 424
-        }
+        },
+        "id": "ntP54z5hodqx",
+        "outputId": "4028058c-6e9d-4ea3-e29b-bf67ae39bdc0"
       },
-      "execution_count": 23,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -288,7 +288,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e39eda0d-1034-487c-9c7f-5dc34967390f\">\n",
+              "  <div id=\"df-7337c076-befd-4e6d-a2c8-0259399568d8\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -384,7 +384,7 @@
               "</table>\n",
               "<p>144 rows × 3 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e39eda0d-1034-487c-9c7f-5dc34967390f')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7337c076-befd-4e6d-a2c8-0259399568d8')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -435,12 +435,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-e39eda0d-1034-487c-9c7f-5dc34967390f button.colab-df-convert');\n",
+              "          document.querySelector('#df-7337c076-befd-4e6d-a2c8-0259399568d8 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-e39eda0d-1034-487c-9c7f-5dc34967390f');\n",
+              "          const element = document.querySelector('#df-7337c076-befd-4e6d-a2c8-0259399568d8');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -463,7 +463,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 5
         }
       ]
     },
@@ -475,7 +475,7 @@
       "metadata": {
         "id": "emnYqo2gnXmX"
       },
-      "execution_count": 24,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -489,9 +489,9 @@
           "height": 424
         },
         "id": "279pzWJyn32O",
-        "outputId": "6a9104de-e831-4855-9e39-b7ec0321f951"
+        "outputId": "c2890d0e-bac9-4469-e0e6-d42771f47c15"
       },
-      "execution_count": 25,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -514,7 +514,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4a92aca7-2abd-4506-b87e-c761de12a8d7\">\n",
+              "  <div id=\"df-2d356038-9cd6-4f64-8475-fdb1680266af\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -622,7 +622,7 @@
               "</table>\n",
               "<p>144 rows × 4 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4a92aca7-2abd-4506-b87e-c761de12a8d7')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2d356038-9cd6-4f64-8475-fdb1680266af')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -673,12 +673,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-4a92aca7-2abd-4506-b87e-c761de12a8d7 button.colab-df-convert');\n",
+              "          document.querySelector('#df-2d356038-9cd6-4f64-8475-fdb1680266af button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-4a92aca7-2abd-4506-b87e-c761de12a8d7');\n",
+              "          const element = document.querySelector('#df-2d356038-9cd6-4f64-8475-fdb1680266af');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -701,9 +701,74 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 7
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(432-390)/390*100"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VIS2i04Xn0zu",
+        "outputId": "149e1839-8f0c-49bc-f783-f724228a671c"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10.76923076923077"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(data['data'][-1:]/data['data'].shift()[-1:]-1)*100"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hEf1HMFZg1S_",
+        "outputId": "d7a8c3c9-9e05-4c45-f7c3-d93c18cbf0b5"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "143    10.769231\n",
+              "Name: data, dtype: float64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "data['Log.data']=np.log(data['data'])"
+      ],
+      "metadata": {
+        "id": "orh7aqAik28P"
+      },
+      "execution_count": 33,
+      "outputs": []
     }
   ]
 }
