--- a/SeriesdeTiempo/Granger_Johansen_Watson.ipynb
+++ b/SeriesdeTiempo/Granger_Johansen_Watson.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/LCaravaggio/AnalisisCuantitativoAvanzado/blob/main/Granger_Johansen_Watson.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://github.com/LCaravaggio/AnalisisCuantitativoAvanzado/edit/main/SeriesdeTiempo/Granger_Johansen_Watson.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
