Creado mediante Colaboratory

--- a/SeriesdeTiempo/Granger_Johansen_Watson.ipynb
+++ b/SeriesdeTiempo/Granger_Johansen_Watson.ipynb
@@ -23,12 +23,12 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://github.com/LCaravaggio/AnalisisCuantitativoAvanzado/edit/main/SeriesdeTiempo/Granger_Johansen_Watson.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/LCaravaggio/AnalisisCuantitativoAvanzado/blob/main/SeriesdeTiempo/Granger_Johansen_Watson.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "JCq4cEpcwo66"
       },
@@ -66,7 +66,7 @@
         "id": "l1rE929PwuDt",
         "outputId": "2c1ca18c-598d-43d3-d2f5-5f4b00f41fac"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,7 +89,7 @@
       "metadata": {
         "id": "Iwf8ASH5xBmQ"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -106,7 +106,7 @@
       "metadata": {
         "id": "DXTXM-gdxONH"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -118,7 +118,7 @@
       "metadata": {
         "id": "ub1KcdOXxTGX"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -130,7 +130,7 @@
       "metadata": {
         "id": "gTdmS7Mfxiar"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -150,7 +150,7 @@
         "id": "lcuqpWyexWXV",
         "outputId": "88c1cc6d-b45b-45f1-be63-21c34d124d82"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -192,7 +192,7 @@
         "id": "GHO5V8U1y2mk",
         "outputId": "28d2391f-e399-4c40-9c83-469a8973f239"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -432,7 +432,7 @@
         "id": "m2VbSB4gzCNS",
         "outputId": "c78e8270-e856-4926-d5ed-829a36f7d956"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -610,7 +610,7 @@
         "id": "lfEZkg3HzKY-",
         "outputId": "829b6430-3966-4ecf-d712-df5ac5f79c57"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -644,7 +644,7 @@
       "metadata": {
         "id": "jNCteOzBzM7e"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -665,7 +665,7 @@
         "id": "20G1BpwczQoV",
         "outputId": "16673771-66ac-478e-cb8c-d0792a221d33"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -707,7 +707,7 @@
         "id": "o0iAF2vBzWZu",
         "outputId": "0e6221a1-ba01-4215-c341-b8f79f91ab7d"
       },
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -780,8 +780,7 @@
       "cell_type": "code",
       "source": [
         "model_fitted = model.fit(2)\n",
-        "model_fitted.summary()\n",
-        ""
+        "model_fitted.summary()\n"
       ],
       "metadata": {
         "colab": {
@@ -790,7 +789,7 @@
         "id": "W6L5HrW6zZ1i",
         "outputId": "0f37ab94-f55b-4984-b360-43ce849c0ec9"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -858,7 +857,7 @@
         "id": "eccaoPEFzb3e",
         "outputId": "dad2b7ad-d970-4e7f-c190-c4dc950db852"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
