Creado mediante Colaboratory

--- a/SeriesdeTiempo/EMAE_predict.ipynb
+++ b/SeriesdeTiempo/EMAE_predict.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMuZpb6SSPzLy2wO8jsL/YA",
+      "authorship_tag": "ABX9TyMiXexYSbmSmUjkUeq2Ocx/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CUgGhtBbpqt4",
-        "outputId": "deabfa33-ecb4-40cd-b9fa-400cac12c630"
+        "outputId": "961a3ed1-6e1e-42ec-9c13-15265441b8e3"
       },
       "execution_count": 2,
       "outputs": [
@@ -107,7 +107,7 @@
       "metadata": {
         "id": "AK_eX_S0p2po"
       },
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -129,7 +129,7 @@
       "metadata": {
         "id": "KiICqmnkxpos"
       },
-      "execution_count": 43,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -150,7 +150,7 @@
       "metadata": {
         "id": "TNXAcl3ixxPW"
       },
-      "execution_count": 44,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -162,7 +162,7 @@
       "metadata": {
         "id": "3i9AbJpex-z2"
       },
-      "execution_count": 45,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -173,7 +173,7 @@
       "metadata": {
         "id": "HKOu6Ms3x5LZ"
       },
-      "execution_count": 46,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -181,14 +181,61 @@
       "source": [
         "from sklearn import linear_model\n",
         "lr = linear_model.LinearRegression()\n",
-        "lr.fit(X[:-1], y[:-1])\n",
-        "Yest = lr.predict(X[:-1])"
+        "lr.fit(X[:-1], y)\n",
+        "Yest = lr.predict(X)"
       ],
       "metadata": {
         "id": "dbMyptIYyzRi"
       },
-      "execution_count": 55,
+      "execution_count": 19,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Yest"
+      ],
+      "metadata": {
+        "id": "2U4GxJKCgIDN",
+        "outputId": "c1badcd4-c7c6-4349-a6d0-a08eb2aacc76",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ 2.05632676e-01, -4.20358996e-01, -8.44221140e-01,  6.13662608e-01,\n",
+              "       -3.85649888e-01, -2.65928043e-01,  1.48173567e+00,  1.19423475e-01,\n",
+              "       -1.67960140e+00,  2.01405643e+00,  6.73385174e-01,  1.72370129e-01,\n",
+              "       -4.33332606e-02,  1.61849256e+00, -9.12171220e-01,  5.86282476e-01,\n",
+              "        7.73274975e-01, -2.22072089e-01,  4.80957791e-01,  8.96772855e-02,\n",
+              "        5.93984144e-01,  9.32867428e-01, -4.49127272e-01,  6.35908365e-01,\n",
+              "       -2.35458147e-01,  3.03464457e-01, -1.96351602e-01, -2.22397704e-01,\n",
+              "        5.79804033e-02, -1.68834597e-01,  3.54650801e-01, -1.87397179e-01,\n",
+              "       -4.31607562e-02, -6.75866830e-01, -7.57139643e-01,  1.21143848e+00,\n",
+              "        1.53970113e+00, -7.95692809e-01,  4.09332794e-01,  4.32968413e-01,\n",
+              "       -1.35833105e+00,  1.18537410e+00, -1.48298585e-01, -5.52762804e-01,\n",
+              "       -3.53524168e-01,  4.30493655e-02, -8.79434691e-01, -2.24532704e-02,\n",
+              "        1.34620133e-01, -5.19773112e+00, -6.81588245e+00,  1.48511130e+01,\n",
+              "        7.40996572e+00,  1.26476453e+00, -1.16000188e+00,  1.80438974e+00,\n",
+              "        5.89723198e-01,  7.28668569e-01,  1.76079596e+00, -6.07290933e-01,\n",
+              "       -6.29878403e-02,  3.68296607e-01, -2.97821378e-01, -1.29159062e+00,\n",
+              "        1.86124720e+00,  2.09938058e-01, -1.93315160e-01,  1.55523627e-01,\n",
+              "        1.89541754e-01,  4.22105496e-01,  1.08607734e+00, -1.39512054e+00,\n",
+              "        1.28112282e+00, -2.14832142e-01,  5.40541851e-01,  2.81533147e-03,\n",
+              "        1.11084813e-01, -6.09832777e-02,  2.64647023e-01, -6.69611903e-02,\n",
+              "       -5.84598314e-01,  3.16646333e-01, -2.29392190e-01,  2.13446740e-01,\n",
+              "        1.84142309e-01,  7.55709512e-01, -3.66492129e-01,  2.97174064e-01])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -204,16 +251,16 @@
         "print('y = ', lr.coef_, 'X + ', lr.intercept_)\n",
         "print()\n",
         "print('Precisión del modelo:')\n",
-        "print(lr.score(X[:-1], y[:-1]))"
+        "print(lr.score(X[:-1], y))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "i8wh1QUv5lRk",
-        "outputId": "0bc0c2ac-2d37-4462-8866-283669fa9f3c"
+        "outputId": "d7a05625-d403-48f6-c0ed-a34328cb1227"
       },
-      "execution_count": 57,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -222,15 +269,15 @@
             "DATOS DEL MODELO REGRESIÓN LINEAL SIMPLE\n",
             "\n",
             "Valor de la pendiente o coeficiente \"a\":\n",
-            "[-0.0344089   0.15729643]\n",
+            "[-0.05085379  0.16227664]\n",
             "Valor de la intersección o coeficiente \"b\":\n",
-            "0.1522808823148907\n",
+            "0.11130067493589973\n",
             "\n",
             "La ecuación del modelo es igual a:\n",
-            "y =  [-0.0344089   0.15729643] X +  0.1522808823148907\n",
+            "y =  [-0.05085379  0.16227664] X +  0.11130067493589973\n",
             "\n",
             "Precisión del modelo:\n",
-            "0.15280636664497793\n"
+            "0.1528041309179733\n"
           ]
         }
       ]
@@ -245,19 +292,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5qDf13D36X3h",
-        "outputId": "bb6f7294-5de5-4d64-84c5-0e445f150e3b"
+        "outputId": "17d29f28-a35f-458e-f807-4dba9de1c61c"
       },
-      "execution_count": 58,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "-0.034408903516004535"
+              "-0.05085378629688597"
             ]
           },
           "metadata": {},
-          "execution_count": 58
+          "execution_count": 23
         }
       ]
     },
@@ -269,7 +316,7 @@
       "metadata": {
         "id": "p1xE_v_J5-lp"
       },
-      "execution_count": 59,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -282,21 +329,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LzoJR96V6hRf",
-        "outputId": "7f12fc78-aac3-4966-a592-bfdb8e63551f"
+        "outputId": "7294b525-45cf-451d-e204-cb98c0f93d57"
       },
-      "execution_count": 60,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "Date\n",
-              "2023-04-01   -0.288719\n",
+              "2023-05-01    0.297174\n",
               "dtype: float64"
             ]
           },
           "metadata": {},
-          "execution_count": 60
+          "execution_count": 25
         }
       ]
     }
